[gd_scene load_steps=2 format=3 uid="uid://dptwrvk52oqil"]

[ext_resource type="Script" path="res://scripts/ui/hud_controller.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="RoundLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Round: 1"

[node name="VSeparator" type="VSeparator" parent="TopBar"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Time: 02:00"

[node name="VSeparator2" type="VSeparator" parent="TopBar"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Money: $1000"

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -50.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="GoldLabel" type="Label" parent="BottomBar"]
layout_mode = 2
text = "Gold: 0/100"

[node name="StorageBar" type="ProgressBar" parent="BottomBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="ScanButton" type="Button" parent="BottomBar"]
layout_mode = 2
text = "SCAN [SPACE]"
